mi-primer-proyecto/force-app/main/default/objects/turno__c/turno__c.object-meta.xml
<CustomObject>
    <label>Turno</label>
    <nameField>
        <displayFormat>TUR-{0000}</displayFormat>
        <label>Turno Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turnos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>