mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Apellido_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paciente__c</fullName>
    <formula>Paciente__r.PAC_Apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Paciente</label>
    <type>Text</type>
</CustomField>