mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Apellido_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Profesional__c</fullName>
    <formula>Profesional__r.Apellido_U__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Profesional</label>
    <type>Text</type>
</CustomField>