mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/DNI_Espec__c.field-meta.xml
<CustomField>
    <fullName>DNI_Espec__c</fullName>
    <formula>Profesional__r.DNI_U__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI Especialista</label>
    <type>Text</type>
</CustomField>