mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/DNI_PAC__c.field-meta.xml
<CustomField>
    <fullName>DNI_PAC__c</fullName>
    <formula>Paciente__r.U_PAC_DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI Paciente</label>
    <type>Text</type>
</CustomField>