mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <formula>Especialidad_Turno__r.Ayuda_Nombre_Espec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Especialidad</label>
    <type>Text</type>
</CustomField>