mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Especialidad_Turno__c.field-meta.xml
<CustomField>
    <fullName>Especialidad_Turno__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Especialidad ID</label>
    <referenceTo>vita_especialidad__c</referenceTo>
    <relationshipLabel>Turnos</relationshipLabel>
    <relationshipName>Turnos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>