mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/estado_del_turno__c.field-meta.xml
<CustomField>
    <fullName>estado_del_turno__c</fullName>
    <label>Estado Del Turno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>