mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/fecha_hora__c.field-meta.xml
<CustomField>
    <fullName>fecha_hora__c</fullName>
    <description>Día y hora programados para la consulta.</description>
    <inlineHelpText>Momento exacto de la cita.</inlineHelpText>
    <label>Fecha Hora</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>