mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/motivo__c.field-meta.xml
<CustomField>
    <fullName>motivo__c</fullName>
    <description>Breve descripción de la razón de la consulta.</description>
    <inlineHelpText>Razón de la consulta.</inlineHelpText>
    <label>Motivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>