mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Nombre_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Paciente__c</fullName>
    <formula>Paciente__r.PAC_Nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Paciente</label>
    <type>Text</type>
</CustomField>