mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Nombre_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Profesional__c</fullName>
    <formula>Profesional__r.Nombre_U__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Profesional</label>
    <type>Text</type>
</CustomField>