mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paciente ID</label>
    <referenceTo>vita_paciente__c</referenceTo>
    <relationshipLabel>Turnos</relationshipLabel>
    <relationshipName>Turnos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>