mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>- La selección está sujeta a disponibilidad de agenda.
- Si el &apos;Tipo de Turno&apos; es &apos;Seguimiento / Control&apos;, se priorizará la asignación con este profesional.
- En caso de agenda saturada para otros tipos de turno, se podrá derivar a otro profesional de la misma especialidad.</inlineHelpText>
    <label>Profesional ID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El profesional seleccionado no pertenece a la especialidad elegida. Por favor, seleccione primero la especialidad.</errorMessage>
        <filterItems>
            <field>$Source.Especialidad_Turno__c</field>
            <operation>equals</operation>
            <valueField>vita_profesional__c.especialidad__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vita_profesional__c</referenceTo>
    <relationshipLabel>Turnos</relationshipLabel>
    <relationshipName>Turnos</relationshipName>
    <type>Lookup</type>
</CustomField>