mi-primer-proyecto/force-app/main/default/objects/turno__c/fields/Tipo_de_Turno__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Turno__c</fullName>
    <label>Tipo de Turno</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primera Consulta</fullName>
                <default>true</default>
                <label>Primera Consulta</label>
            </value>
            <value>
                <fullName>Seguimiento / Control</fullName>
            </value>
            <value>
                <fullName>Urgencia</fullName>
            </value>
            <value>
                <fullName>Postoperatorio</fullName>
            </value>
            <value>
                <fullName>Estudio / Laboratorio</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>